src/test/ui/consts/const_fn_trait_bounds.gated.stderr
error: fatal error triggered by #[rustc_error]
  --> $DIR/const_fn_trait_bounds.rs:17:1
   |
LL | fn main() {}
   | ^^^^^^^^^

error: aborting due to previous error

